--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 # Copy this file to .env
-LOG_LEVEL=INFO # Set console output log level, one of TRACE, DEBUG, INFO, SUCCESS, WARNING, ERROR, CRITICAL
+# One of TRACE, DEBUG, INFO (default), SUCCESS, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+
+# Start in fullscreen mode? TRUE (default) or FALSE
+AUTOFULLSCREEN=TRUE
