--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ LOG_LEVEL=INFO
 
 # Start in fullscreen mode? TRUE (default) or FALSE
 AUTOFULLSCREEN=TRUE
+
+# Motor speeds
+SHAFTMOTOR_SPEED=0.00005
+PLATFORMMOTOR_SPEED=0.00005
