--- a/cubepiler.service
+++ b/cubepiler.service
@@ -4,9 +4,9 @@ After=network.target
 
 [Service]
 Type=simple
-User=user
-WorkingDirectory=/home/user/PREN2
-ExecStart=/bin/bash /home/user/PREN2/scripts/service.sh
+User=pi
+WorkingDirectory=/home/pi/PREN2
+ExecStart=/bin/bash /home/pi/PREN2/scripts/service.sh
 Restart=on-failure
 
 [Install]
