--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ imutils = "^0.5.4"
 pysimplegui = "^5.0.3"
 customtkinter = "^5.2.2"
 rpi-gpio = "^0.7.1"
+smbus2 = "^0.4.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
