--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ AUTOFULLSCREEN=TRUE
 # Motor speeds
 SHAFTMOTOR_SPEED=0.00005
 PLATFORMMOTOR_SPEED=0.00005
+
+# API
+URL="https://oawz3wjih1.execute-api.eu-central-1.amazonaws.com"
+TEAM_ID="team12"
+AUTH_TOKEN=""
