--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,20 @@
 # Copy this file to .env
-# One of TRACE, DEBUG, INFO (default), SUCCESS, WARNING, ERROR, CRITICAL
+# One of TRACE, DEBUG, INFO, SUCCESS, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 
 # Start in fullscreen mode? TRUE (default) or FALSE
 AUTOFULLSCREEN=TRUE
 
-# Motor speeds
-SHAFTMOTOR_SPEED=0.00005
-PLATFORMMOTOR_SPEED=0.00005
-
-# API
-URL="https://oawz3wjih1.execute-api.eu-central-1.amazonaws.com"
-TEAM_ID="team12"
+# API DETAILS
+API_URL=""
+TEAM_ID=""
 AUTH_TOKEN=""
+
+# STREAM DETAILS
+STREAM_IP=""
+STREAM_USER=""
+STREAM_PWD=""
+
+# MOCKING FOR DEBUG PURPOSES
+MOCK=FALSE       # MOCKS MOTORS
+MOCK_CUBES=FALSE # MOCKS IMAGE RECOGNITION
