--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,22 +17,21 @@ repository = "https://github.com/danlivingston/PREN2"
 documentation = "https://www.overleaf.com/project/65d8516955a5ecf8a48d2893"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-opencv-python = "^4.9.0.80"
-ultralytics = "^8.1.18"
-loguru = "^0.7.2"
-python-dotenv = "^1.0.1"
-gpiozero = "^2.0.1"
-pygame = "^2.5.2"
-opencv-contrib-python = "^4.9.0.80"
-opencv-python-headless = "^4.9.0.80"
-imutils = "^0.5.4"
-pysimplegui = "^5.0.3"
 customtkinter = "^5.2.2"
+imutils = "^0.5.4"
+loguru = "^0.7.2"
+opencv-contrib-python = "^4.9.0.80"
+opencv-python = "^4.9.0.80"
+opencv-python-headless = "^4.9.0.80"
+python = "^3.11"
+python-dotenv = "^1.0.1"
 rpi-gpio = "^0.7.1"
 smbus2 = "^0.4.3"
+ultralytics = "^8.1.18"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.0.2"
-isort = "^5.13.2"
 black = { extras = ["jupyter"], version = "^24.2.0" }
+flake8 = "^7.0.0"
+flake8-bugbear = "^24.4.26"
+isort = "^5.13.2"
+pytest = "^8.0.2"
